# veritasops

./: .dockerignore  .gitignore  README.md  __init__.py  benchmark.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  rewards.py  simulator.py  tasks.py  utils.py
data/: task_easy.json  task_hard.json  task_medium.json
openenv_veritasops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  veritasops_environment.py
tests/: test_env.py  test_grader.py  test_tasks.py
